--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,8 @@ jobs:
         with:
           go-version: 1.15
       - run: ./scripts/release.sh
+        env:
+          IMAGE_TAG: ${GITHUB_REF}
+          DOCKER_USER: simonsargeant
+          DOCKER_TOKEN: ${{secrets.DOCKER_TOKEN}}
+          DOCKER_HOST: ""
