--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           go-version: 1.15
       - run: ./scripts/release.sh
         env:
-          IMAGE_TAG: ${GITHUB_REF}
+          IMAGE_TAG: ${{env.GITHUB_SHA}}
           DOCKER_USER: simonsargeant
           DOCKER_TOKEN: ${{secrets.DOCKER_TOKEN}}
           DOCKER_HOST: ""
