--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
           go-version: 1.15
       - run: ./scripts/unit-test.sh
   compile:
+    # TODO: turn this into a binary release
     needs: [unit-test, shell-check, code-check]
     runs-on: ubuntu-latest
     container: "golang:1.15-buster"
@@ -30,6 +31,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: ./scripts/compile.sh
   release:
+    if: github.ref == 'refs/heads/main'
     needs: [unit-test, shell-check, code-check]
     runs-on: ubuntu-latest
     steps:
